<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cart_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/cart_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:padding="@dimen/padding_regular"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cart_title"
        android:hint="Ex: Walmart"
        android:text="" />

    <Button
        android:id="@+id/open_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_below="@id/location_edittext"
        android:text="@string/open_location_button"
        android:onClick="openLocation"/>

    <Button
        android:id="@+id/cart_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/cart_add_item"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_below="@id/open_location_button"
        android:onClick="callShoppingItems" />

    <TextView
        android:id="@+id/cart_items_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/cart_items_title"
        android:layout_below="@id/cart_add_item"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cart_items_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cart_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="" />

            <TextView
                android:id="@+id/cart_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="" />

            <TextView
                android:id="@+id/cart_item_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="" />

            <TextView
                android:id="@+id/cart_item_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="" />

            <TextView
                android:id="@+id/cart_item_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="" />

            <TextView
                android:id="@+id/cart_item_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="" />

            <TextView
                android:id="@+id/cart_item_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="" />

            <TextView
                android:id="@+id/cart_item_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="" />

            <TextView
                android:id="@+id/cart_item_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="" />

            <TextView
                android:id="@+id/cart_item_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_regular"
                android:text="" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>